--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,15 +4,18 @@
     "attributify",
     "iconify",
     "intlify",
+    "keyval",
     "noopener",
     "nprogress",
     "pinia",
     "pnpm",
+    "RUBN",
     "typecheck",
     "unplugin",
     "vitejs",
     "Vitesse",
     "vueuse",
+    "windi",
     "windicss"
   ],
   "i18n-ally.keystyle": "nested",
