--- a/.eslintrc
+++ b/.eslintrc
@@ -1,5 +1,11 @@
 {
   "extends": [
     "@antfu"
-  ]
+  ],
+  "rules": {
+    "semi": "off",
+    "@typescript-eslint/semi": [
+      "off"
+    ]
+  }
 }
