--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "devDependencies": {
     "@antfu/eslint-config": "0.10.0",
     "@iconify-json/carbon": "1.0.8",
+    "@iconify-json/mdi": "^1.0.8",
     "@intlify/vite-plugin-vue-i18n": "3.0.0",
     "@types/base-64": "^1.0.0",
     "@types/markdown-it-link-attributes": "3.0.1",
