--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
   "dependencies": {
     "@vueuse/core": "6.7.6",
     "@vueuse/head": "0.6.0",
-    "base-64": "^1.0.0",
-    "idb-keyval": "^6.0.3",
+    "idb-keyval": "6.0.3",
     "nprogress": "0.2.0",
     "prism-theme-vars": "0.2.2",
     "vue": "3.2.21",
@@ -19,23 +18,26 @@
   "devDependencies": {
     "@antfu/eslint-config": "0.10.0",
     "@iconify-json/carbon": "1.0.9",
-    "@iconify-json/mdi": "^1.0.8",
+    "@iconify-json/mdi": "1.0.8",
     "@intlify/vite-plugin-vue-i18n": "3.0.0",
-    "@types/base-64": "^1.0.0",
+    "@types/base-64": "1.0.0",
     "@types/markdown-it-link-attributes": "3.0.1",
     "@types/nprogress": "0.2.0",
     "@vitejs/plugin-vue": "1.9.4",
     "@vue/compiler-sfc": "3.2.21",
+    "@vue/eslint-config-prettier": "6.0.0",
     "@vue/server-renderer": "3.2.21",
     "critters": "0.0.14",
     "cross-env": "7.0.3",
     "cypress": "8.7.0",
     "eslint": "8.1.0",
     "eslint-plugin-cypress": "2.12.1",
+    "eslint-plugin-prettier": "4.0.0",
     "https-localhost": "4.7.0",
     "markdown-it-link-attributes": "3.0.0",
     "markdown-it-prism": "2.2.1",
     "pnpm": "6.20.3",
+    "prettier": "2.4.1",
     "typescript": "4.4.4",
     "unplugin-auto-import": "0.4.13",
     "unplugin-icons": "0.12.18",
