fix: :art: Format code
Signed-off-by: Rubén Conde <dev@rubn.xyz>

--- a/.eslintrc
+++ b/.eslintrc
@@ -1,13 +1,17 @@
 {
- "extends": [
-  "@antfu/eslint-config",
-  "@vue/prettier",
-  "@vue/prettier/@typescript-eslint"
-],
+  "extends": [
+    "@antfu/eslint-config",
+    "@vue/prettier",
+    "@vue/prettier/@typescript-eslint"
+  ],
   "rules": {
     "semi": "off",
     "@typescript-eslint/semi": [
       "off"
-    ]
+    ],
+    "yml/indent": [
+      "error",
+      3
+    ],
   }
 }
