--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "devDependencies": {
     "@antfu/eslint-config": "0.10.0",
     "@iconify-json/carbon": "1.0.10",
+    "@iconify-json/ic": "^1.0.5",
     "@iconify-json/mdi": "1.0.10",
     "@intlify/vite-plugin-vue-i18n": "3.1.0",
     "@types/base-64": "1.0.0",
