feat: :sparkles: PWA
Signed-off-by: Rubén Conde <ruben.conde@ux-key.com>

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,10 +2,13 @@
    "cSpell.words": [
       "antfu",
       "attributify",
+      "fullscreen",
       "iconify",
       "intlify",
       "IURL",
       "keyval",
+      "msapplication",
+      "mstile",
       "noopener",
       "nprogress",
       "Parens",
