--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
       "@vueuse/head": "0.6.0",
       "axios": "^0.24.0",
       "idb-keyval": "6.0.3",
+      "luxon": "^2.1.1",
       "nprogress": "0.2.0",
       "prism-theme-vars": "0.2.2",
       "vue": "3.2.21",
@@ -23,6 +24,7 @@
       "@iconify-json/mdi": "1.0.10",
       "@intlify/vite-plugin-vue-i18n": "3.1.0",
       "@types/base-64": "1.0.0",
+      "@types/luxon": "^2.0.7",
       "@types/markdown-it-link-attributes": "3.0.1",
       "@types/nprogress": "0.2.0",
       "@vitejs/plugin-vue": "1.9.4",
