--- a/public/manifest.json
+++ b/public/manifest.json
@@ -2,7 +2,7 @@
    "background_color": "#f8d9c9",
    "categories": ["utilities", "productivity"],
    "description": "URL Shortener",
-   "display": "fullscreen",
+   "display": "standalone",
    "features": ["Cross Platform", "fast", "simple", "cool"],
    "icons": [
       {
