--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,2 @@
 VITE_API_BASE_URL= #Base URL where the data will be fetched from.
+VITE_VALIDITY_DAYS= #Number of days in the validity period for the URLs.
