--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
       "@vue/compiler-sfc": "3.2.22",
       "@vue/eslint-config-prettier": "6.0.0",
       "@vue/server-renderer": "3.2.22",
+      "@windicss/plugin-question-mark": "^0.1.1",
       "critters": "0.0.14",
       "cross-env": "7.0.3",
       "cypress": "9.0.0",
