--- a/netlify.toml
+++ b/netlify.toml
@@ -11,7 +11,13 @@
   to = "/index.html"
   status = 200
 
+[[redirects]]
+  from = "https://url-shortener-front.netlify.app"
+  to = "https://url-shortener.rubenconde.com"
+  status = 301
+  force = true
+
 [[headers]]
-  for = "/manifest.webmanifest"
+  for = "/manifest.json"
   [headers.values]
     Content-Type = "application/manifest+json"
