--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
       "vue-i18n": "9.1.9",
       "vue-router": "4.0.12"
    },
-   "description": "URL Shortener front-end site",
+   "description": "Cutting Ninja front-end site",
    "devDependencies": {
       "@antfu/eslint-config": "0.10.0",
       "@iconify-json/carbon": "1.0.10",
