fix: :adhesive_bandage: Metadata info and tweaks
Signed-off-by: Rubén Conde <dev@rubn.xyz>

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,6 @@
 {
    "cSpell.words": [
+      "acortador",
       "antfu",
       "attributify",
       "fullscreen",
@@ -14,6 +15,7 @@
       "Parens",
       "pinia",
       "pnpm",
+      "rubenconde",
       "RUBN",
       "rubncond",
       "typecheck",
