--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,5 +1,5 @@
 {
-   "background_color": "#f8d9c9",
+   "background_color": "#F8D9C9",
    "categories": ["utilities", "productivity"],
    "description": "Cutting Ninja",
    "display": "standalone",
@@ -23,6 +23,11 @@
       {
          "sizes": "96x96",
          "src": "/android-chrome-96x96.png",
+         "type": "image/png"
+      },
+      {
+         "sizes": "128x128",
+         "src": "/android-chrome-128x128.png",
          "type": "image/png"
       },
       {
@@ -52,6 +57,12 @@
       },
       {
          "purpose": "maskable",
+         "sizes": "36x36",
+         "src": "/maskable_icon_x36.png",
+         "type": "image/png"
+      },
+      {
+         "purpose": "maskable",
          "sizes": "48x48",
          "src": "/maskable_icon_x48.png",
          "type": "image/png"
@@ -76,8 +87,20 @@
       },
       {
          "purpose": "maskable",
+         "sizes": "144x144",
+         "src": "/maskable_icon_x144.png",
+         "type": "image/png"
+      },
+      {
+         "purpose": "maskable",
          "sizes": "192x192",
          "src": "/maskable_icon_x192.png",
+         "type": "image/png"
+      },
+      {
+         "purpose": "maskable",
+         "sizes": "256x256",
+         "src": "/maskable_icon_x256.png",
          "type": "image/png"
       },
       {
@@ -93,6 +116,7 @@
          "type": "image/png"
       }
    ],
+   "id": "/",
    "lang": "English",
    "name": "Cutting Ninja",
    "orientation": "any",
@@ -110,7 +134,14 @@
          "icons": [
             {
                "sizes": "192x192",
-               "src": "/maskable_icon_x192.png"
+               "src": "/android-chrome-192x192.png",
+               "type": "image/png"
+            },
+            {
+               "purpose": "maskable",
+               "sizes": "192x192",
+               "src": "/maskable_icon_x192.png",
+               "type": "image/png"
             }
          ],
          "name": "Cutting Ninja",
@@ -119,5 +150,5 @@
       }
    ],
    "start_url": "/",
-   "theme_color": "#f8d9c9"
+   "theme_color": "#F8D9C9"
 }
