--- a/public/manifest.json
+++ b/public/manifest.json
@@ -127,6 +127,18 @@
          "platform": "play"
       }
    ],
+   "screenshots": [
+      {
+         "sizes": "403x808",
+         "src": "/assets/screenshot-mobile.png",
+         "type": "image/png"
+      },
+      {
+         "sizes": "1920x1117",
+         "src": "/assets/screenshot-desktop.png",
+         "type": "image/png"
+      }
+   ],
    "short_name": "Cutting Ninja",
    "shortcuts": [
       {
