--- a/.prettierrc
+++ b/.prettierrc
@@ -4,7 +4,7 @@
    "endOfLine": "auto",
    "jsxSingleQuote": true,
    "printWidth": 100,
-   "proseWrap": "never",
+   "proseWrap": "always",
    "quoteProps": "as-needed",
    "semi": true,
    "singleQuote": true,
