feat: :sparkles: Table-Image toggle button always visible when possible
Signed-off-by: Rubén Conde <dev@rubn.xyz>

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -37,5 +37,6 @@
    "files.associations": {
       "*.css": "postcss"
    },
-   "editor.formatOnSave": true
+   "editor.formatOnSave": true,
+   "i18n-ally.sourceLanguage": "fr"
 }
