feat: :sparkles: Mobile table indicator
Signed-off-by: Rubén Conde <dev@rubn.xyz>

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -38,5 +38,5 @@
       "*.css": "postcss"
    },
    "editor.formatOnSave": true,
-   "i18n-ally.sourceLanguage": "fr"
+   "i18n-ally.sourceLanguage": "en"
 }
