refactor: :recycle: Redirects
Signed-off-by: Rubén Conde <dev@rubn.xyz>

--- a/netlify.toml
+++ b/netlify.toml
@@ -13,9 +13,16 @@
   force = true
 
 [[redirects]]
+  from = "/.well-known/assetlinks.json"
+  to = "/.well-known/assetlinks.json"
+  status = 200
+  force = true
+
+[[redirects]]
   from = "/*"
   to = "/index.html"
   status = 200
+  force = true
 
 [[headers]]
   for = "/manifest.json"
