--- a/netlify.toml
+++ b/netlify.toml
@@ -7,8 +7,8 @@
   command = "npx pnpm i --store=node_modules/.pnpm-store && npx pnpm run build"
 
 [[redirects]]
-  from = "https://cuttingninja.netlify.app/"
-  to = "https://cuttingninja.page/"
+  from = "https://cuttingninja.netlify.app/*"
+  to = "https://cuttingninja.page/*"
   status = 301
   force = true
 
@@ -23,6 +23,11 @@
   to = "/index.html"
   status = 200
   force = true
+
+[[headers]]
+  for = "/.well-known/assetlinks.json"
+  [headers.values]
+    Content-Type = "application/manifest+json"
 
 [[headers]]
   for = "/manifest.json"
