--- a/netlify.toml
+++ b/netlify.toml
@@ -21,7 +21,7 @@
 [[headers]]
   for = "/.well-known/assetlinks.json"
   [headers.values]
-    Content-Type = "application/manifest+json"
+    Content-Type = "application/json"
 
 [[headers]]
   for = "/manifest.json"
