--- a/package.json
+++ b/package.json
@@ -4,25 +4,26 @@
       "url": "https://github.com/MariachiBear/cutting-ninja-page/issues"
    },
    "dependencies": {
-      "@vueuse/core": "8.9.4",
-      "@vueuse/head": "0.7.6",
+      "@vueuse/core": "9.0.0",
+      "@vueuse/head": "0.7.7",
+      "@vueuse/math": "^9.0.0",
       "axios": "^0.27.2",
       "idb-keyval": "6.2.0",
       "luxon": "^3.0.1",
       "nprogress": "0.2.0",
       "prism-theme-vars": "0.2.4",
       "vue": "3.2.37",
-      "vue-demi": "0.13.5",
+      "vue-demi": "0.13.6",
       "vue-i18n": "9.1.10",
       "vue-router": "4.1.2"
    },
    "description": "Cutting Ninja front-end site",
    "devDependencies": {
       "@antfu/eslint-config": "0.25.2",
-      "@iconify-json/carbon": "1.1.6",
+      "@iconify-json/carbon": "1.1.7",
       "@iconify-json/ic": "^1.1.7",
       "@iconify-json/mdi": "1.1.29",
-      "@intlify/vite-plugin-vue-i18n": "5.0.0",
+      "@intlify/vite-plugin-vue-i18n": "5.0.1",
       "@types/base-64": "1.0.0",
       "@types/luxon": "^3.0.0",
       "@types/markdown-it-link-attributes": "3.0.1",
@@ -38,25 +39,26 @@
       "eslint": "8.20.0",
       "eslint-plugin-cypress": "2.12.1",
       "eslint-plugin-prettier": "4.2.1",
+      "happy-dom": "^6.0.4",
       "https-localhost": "4.7.1",
       "markdown-it-link-attributes": "4.0.0",
       "markdown-it-prism": "2.2.4",
-      "pnpm": "7.5.2",
+      "pnpm": "7.6.0",
       "prettier": "2.7.1",
       "rimraf": "^3.0.2",
       "typescript": "4.7.4",
-      "unplugin-auto-import": "0.9.4",
+      "unplugin-auto-import": "0.10.1",
       "unplugin-icons": "0.14.7",
-      "unplugin-vue-components": "0.21.1",
-      "vite": "3.0.2",
+      "unplugin-vue-components": "0.21.2",
+      "vite": "3.0.3",
       "vite-plugin-inspect": "0.6.0",
-      "vite-plugin-md": "0.18.1",
+      "vite-plugin-md": "0.20.0",
       "vite-plugin-pages": "0.25.0",
       "vite-plugin-pwa": "0.12.3",
-      "vite-plugin-vue-layouts": "0.6.0",
+      "vite-plugin-vue-layouts": "0.7.0",
       "vite-plugin-windicss": "1.8.7",
       "vite-ssg": "0.20.2",
-      "vue-tsc": "0.38.9"
+      "vue-tsc": "0.39.0"
    },
    "homepage": "https://github.com/MariachiBear/cutting-ninja-page#readme",
    "license": "MIT",
