--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,11 @@
-VITE_API_BASE_URL= #Base URL where the data will be fetched from.
-VITE_VALIDITY_DAYS= #Number of days in the validity period for the URLs.
+VITE_API_BASE_URL= # Base URL where the data will be fetched from.
+VITE_VALIDITY_DAYS= # Number of days in the validity period for the URLs.
+
+VITE_CONTACT_EMAIL= # Email address
+VITE_TWITTER_LINK= # URL to Twitter
+VITE_GITHUB_LINK= # URL to GitHub
+VITE_GITLAB_LINK= # URL to Gitlab
+VITE_LINKEDIN_LINK= # URL to LinkedIn
+VITE_BLOG_LINK= # URL to Blog
+VITE_ABOUT_LINK= # URL to About page
+VITE_SOURCE_CODE_LINK= # URL to source code
