--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
       "dev": "cross-env NODE_ENV=development vite --port 3333 --open",
       "eslint:check": "eslint --ext .js,.jsx,.ts,.tsx,.vue --ignore-path .gitignore . --color",
       "eslint:format": "eslint --ext .js,.jsx,.ts,.tsx,.vue --ignore-path .gitignore . --fix",
+      "prettier:format": "prettier --ignore-path .gitignore -l -w \"./**/*.{js,jsx,ts,tsx,vue}\"",
       "preview": "vite preview",
       "preview-https": "serve dist",
       "test": "cypress open",
