--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
       "axios": "^0.27.2",
       "idb-keyval": "6.2.0",
       "luxon": "^3.0.1",
+      "md5": "^2.3.0",
       "nprogress": "0.2.0",
       "prism-theme-vars": "0.2.4",
       "vue": "3.2.37",
@@ -27,6 +28,7 @@
       "@types/base-64": "1.0.0",
       "@types/luxon": "^3.0.0",
       "@types/markdown-it-link-attributes": "3.0.1",
+      "@types/md5": "^2.3.2",
       "@types/nprogress": "0.2.0",
       "@vitejs/plugin-vue": "3.0.1",
       "@vue/compiler-sfc": "3.2.37",
