refactor: :sparkles: Added profile pictures sources links
Signed-off-by: Rubén Conde Magaña <code@rubn.dev>

--- a/.env.example
+++ b/.env.example
@@ -9,3 +9,6 @@ VITE_LINKEDIN_LINK= # URL to LinkedIn
 VITE_BLOG_LINK= # URL to Blog
 VITE_ABOUT_LINK= # URL to About page
 VITE_SOURCE_CODE_LINK= # URL to source code
+
+VITE_GRAVATAR_LINK= # URL to Gravatar
+VITE_BORING_AVATARS_LINK= # URL to Boring Avatars
