refactor: :recycle: Changes to github actions
Signed-off-by: Rubén Conde Magaña <code@rubn.dev>

--- a/.github/workflows/rebase_to_master.yml
+++ b/.github/workflows/rebase_to_master.yml
@@ -3,7 +3,6 @@ on:
   push:
     branches:
       - master
-
   workflow_call:
     inputs:
       branch_name:
@@ -29,10 +28,11 @@ jobs:
           fetch-depth: 0
           ref: dependencies
 
-      - env:
+      - name: Rebase branch to ${{ github.event.repository.default_branch }}
+        env:
           BRANCH_NAME: ${{ inputs.branch_name }}
         run: |
           git config user.name github-actions
           git config user.email github-actions@github.com
-          git rebase origin/master
+          git rebase origin/${{ github.event.repository.default_branch }}
           [ -z $BRANCH_NAME ] && git push origin dependencies --force || git push origin $BRANCH_NAME --force
