refactor: :sparkles: Big refactor
Signed-off-by: Rubén Conde Magaña <code@rubn.dev>

--- a/.env.example
+++ b/.env.example
@@ -1,14 +1,16 @@
 VITE_API_BASE_URL= # Base URL where the data will be fetched from.
 VITE_VALIDITY_DAYS= # Number of days in the validity period for the URLs.
 
+VITE_ABOUT_URL= # URL to About page
+VITE_BLOG_URL= # URL to Blog
 VITE_CONTACT_EMAIL= # Email address
-VITE_TWITTER_LINK= # URL to Twitter
-VITE_GITHUB_LINK= # URL to GitHub
-VITE_GITLAB_LINK= # URL to Gitlab
-VITE_LINKEDIN_LINK= # URL to LinkedIn
-VITE_BLOG_LINK= # URL to Blog
-VITE_ABOUT_LINK= # URL to About page
-VITE_SOURCE_CODE_LINK= # URL to source code
+VITE_GITHUB_URL= # URL to GitHub
+VITE_GITLAB_URL= # URL to Gitlab
+VITE_SOURCE_CODE_URL= # URL to source code
+VITE_TWITTER_URL= # URL to Twitter
+VITE_URLEDIN_URL= # URL to LinkedIn
 
-VITE_GRAVATAR_LINK= # URL to Gravatar
-VITE_BORING_AVATARS_LINK= # URL to Boring Avatars
+VITE_BORING_AVATARS_BASE_URL= # Base URL where the data will be fetched from boring avatars
+VITE_BORING_AVATARS_URL= # URL to Boring Avatars
+VITE_GRAVATAR_BASE_URL= # Base URL where the data will be fetched from gravatar
+VITE_GRAVATAR_URL= # URL to Gravatar
