--- a/renovate.json
+++ b/renovate.json
@@ -1,25 +1,23 @@
 {
-  "$schema": "https://docs.renovatebot.com/renovate-schema.json",
-  "baseBranches": [
-    "dependencies"
-  ],
-  "extends": [
-    ":automergeDisabled",
-    ":docker",
-    ":enableVulnerabilityAlerts",
-    ":maintainLockFilesWeekly",
-    ":npm",
-    ":pinAllExceptPeerDependencies",
-    ":prConcurrentLimitNone",
-    ":prHourlyLimitNone",
-    ":renovatePrefix",
-    "config:base",
-    "github>whitesource/merge-confidence:beta",
-    "monorepo:vue",
-    "monorepo:vue-cli",
-    "monorepo:vue-cli",
-    "packages:eslint",
-    "replacements:all",
-    "schedule:nonOfficeHours"
-  ]
+   "$schema": "https://docs.renovatebot.com/renovate-schema.json",
+   "baseBranches": ["dependencies"],
+   "extends": [
+      ":automergeDisabled",
+      ":docker",
+      ":enableVulnerabilityAlerts",
+      ":maintainLockFilesWeekly",
+      ":npm",
+      ":pinAllExceptPeerDependencies",
+      ":prConcurrentLimitNone",
+      ":prHourlyLimitNone",
+      ":renovatePrefix",
+      "config:base",
+      "github>whitesource/merge-confidence:beta",
+      "monorepo:vue",
+      "monorepo:vue-cli",
+      "monorepo:vue-cli",
+      "packages:eslint",
+      "replacements:all",
+      "schedule:nonOfficeHours"
+   ]
 }
